# CMake-CrossPlatform_Test

./: .gitignore  CMake-CrossPlatform_Test.kdev4  CMakeLists.txt  README.md
.kdev4/: CMake-CrossPlatform_Test.kdev4
include/: GLFW_gui.h  GLFW_input.h  GLFW_window.h  GameCamera.h  GameInput.h  GameKinematic.h  GameScreen.h  GameTimer.h  GameWindow.h  GeometryBase.h  GeometryBox.h  Global.h  GraphicsHelpers.h  Linux_Specific.h  MacOS_Specific.h  RenderCPU.h  Transformation.h  VulkanCommand.h  VulkanDesc.h  VulkanDescBuffer.h  VulkanDescBufferUniform.h  VulkanDevice.h  VulkanGraphicsPipeline.h  VulkanInstance.h  VulkanPhysicalDevice.h  VulkanQueue.h  VulkanResourceHelpers.h  VulkanSpecializationConstant.h  VulkanSwapChain.h  VulkanSynchronization.h  VulkanUberDescriptorSet.h  Vulkan_gpu.h  Windows_Specific.h
shaderBinary/: box.frag.spv  box.vert.spv
shaders/: CompileO_Graphics.bat  Global.comp  Graphics.comp  SDF.comp  box.frag  box.vert  box.vert.spv
src/: 0_searchString_C_H.bat  GLFW_gui.cpp  GameCamera.cpp  GameInput.cpp  GameScreen.cpp  GameTimer.cpp  GameWindow.cpp  GeometryBox.cpp  Global.cpp  Linux_Specific.cpp  MacOS_Specific.cpp  RenderCPU.cpp  VulkanCommand.cpp  VulkanDesc.cpp  VulkanDescBuffer.cpp  VulkanDescBufferStaged.cpp  VulkanDescBufferUniform.cpp  VulkanDevice.cpp  VulkanGraphicsPipeline.cpp  VulkanInstance.cpp  VulkanPhysicalDevice.cpp  VulkanQueue.cpp  VulkanResourceHelpers.cpp  VulkanSpecializationConstant.cpp  VulkanSwapChain.cpp  VulkanSynchronization.cpp  VulkanUberDescriptorSet.cpp  Vulkan_gpu.cpp  Windows_Specific.cpp  main.cpp
